--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3",
     "uuid4": "^2.0.3",
     "uuidv4": "^6.2.13"
   },
